ethereum/230-ethstats-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eth-ethstats
  namespace: ethereum
  labels:
    app: eth-ethstats
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: eth-ethstats
  template:
    metadata:
      labels:
        app: eth-ethstats
    spec:
      containers:
      - name: ethstats
        image: ethereumex/eth-stats-dashboard:latest
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 3000
