ethereum/130-bootnode-registrar-service.yml
apiVersion: v1
kind: Service
metadata:
  name: eth-bootnode-registrar
  namespace: ethereum
  labels:
    app: eth-bootnode-registrar
spec:
  selector:
    app: eth-bootnode-registrar
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 9898
