ethereum/210-ethstats-service.yml
apiVersion: v1
kind: Service
metadata:
  name: eth-ethstats
  namespace: ethereum
  labels:
    app: eth-ethstats
spec:
  selector:
    app: eth-ethstats
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
